@@ -7,6 +7,10 @@ saveLine=Save line
 slope=Slope
 hideLines=Hide lines
 slopeUndefined=slope undefined
+check=Check
+tryAgain=Try Again
+showAnswer=Show Answer
+next=Next
 
 symbol.x=x
 symbol.x1=<html>x<sub>1</sub></html>
